--- a/globals.css
+++ b/globals.css
@@ -58,6 +58,8 @@ input {
 
 label {
     display: inline-block;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 
@@ -66,4 +68,47 @@ section {
     padding-left: 500px;
     padding-top: 10px;
     margin-top: 20px;
+}
+
+button {
+    margin-top: 100px;
+    width: 157px;
+    background: #596D48;
+    color: white;
+    border-radius: 6px;
+    border: 0;
+    font-weight: bold;
+    height: 35px;
+    box-shadow: 4px 4px 11px 0px rgb(0 0 0 / 50%);
+}
+
+#form-container {
+    box-shadow: 4px 2px 2px 3px rgb(0 0 0 / 20%);
+    height: 300px;
+    margin-bottom: 10px;
+}
+
+#first_name,
+#user_email,
+#user_password {
+    margin-right: 70px;
+
+
+}
+
+span p {
+    margin-top: 100px;
+    margin-left: 500px;
+}
+
+span a {
+
+    color: #596D48;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+input {
+    opacity: 0.3;
+    margin-bottom: 20px;
 }
