--- a/globals.css
+++ b/globals.css
@@ -62,8 +62,13 @@ label {
     font-weight: 500;
 }
 
+form {
 
-form,
+    padding-top: 10px;
+    margin-top: 20px;
+}
+
+
 section {
     padding-left: 500px;
     padding-top: 10px;
@@ -89,8 +94,8 @@ button {
 }
 
 #first_name,
-#user_email,
-#user_password {
+#email,
+#password {
     margin-right: 70px;
 
 
@@ -109,6 +114,13 @@ span a {
 }
 
 input {
-    opacity: 0.3;
+    padding-left: 5px;
+    border-color: rgb(0 0 0 / 20%);
+    border-radius: 3px;
     margin-bottom: 20px;
+}
+
+input:focus {
+    outline: none;
+    border: 0.1px solid royalblue;
 }
