--- a/globals.css
+++ b/globals.css
@@ -31,10 +31,24 @@ h5 {
 }
 
 #odin-logo {
-    margin-left: -50px;
-    width: 80px;
-    position: relative;
+    margin-left: -130px;
+    width: 110px;
+    position: absolute;
     z-index: 2;
+    margin-top: -170px;
+}
+
+#odin-text {
+    font-weight: bolder;
+    font-size: xx-large;
+    font-family: Norse-Bold;
+    color: white;
+    margin-top: -70px;
+    margin-left: 215px;
+    text-align: center;
+    position: absolute;
+    font-size: xxx-large;
+
 }
 
 .odin-logo-container p {
@@ -52,6 +66,7 @@ h5 {
     z-index: 1;
 }
 
+
 input {
     display: block;
 }
@@ -63,7 +78,6 @@ label {
 }
 
 form {
-
     padding-top: 10px;
     margin-top: 20px;
 }
@@ -107,7 +121,6 @@ span p {
 }
 
 span a {
-
     color: #596D48;
     font-weight: bold;
     text-decoration: none;
